Fix company name overflow on class details page

--- a/src/styles/pages/_classDetails.scss
+++ b/src/styles/pages/_classDetails.scss
@@ -25,9 +25,10 @@
             align-items: center;
             font-size: 1.4em;
             font-weight: 300;
-            margin-top: 10px;
-            margin-bottom: 0px;
+            margin: 15px 0 20px 0;
             text-transform: capitalize;
+            border: 1px solid red;
+            height: 45px;
 
             .logo {
                 display: block;
@@ -35,11 +36,6 @@
                 width: 45px;
                 border-radius: 50%;
                 margin-right: 10px;
-            }
-
-            .company-name {
-                height: 45px;
-                line-height: 45px;
             }
         }
 
@@ -59,7 +55,7 @@
             flex-direction: column;
             justify-content: center;
             align-items: flex-start ;
-            margin: 30px 0 0 0;
+            margin: 0;
             padding: 20px 0;
             color: rgba(0, 0, 0, 0.54);
             border-top: 1px solid $font-very-pale;
